# epix_engine

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  FINAL_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PROGRESS.md  MODULES.md  MODULES_MIGRATION.md  MODULES_REFACTORING_GUIDE.md  MODULES_SUMMARY.md  PR_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SCHEDULE_IMPLEMENTATION.md  encode.ps1  meson.build  wgpu.cmake  xmake.lua
docs/: CMakeLists.txt  CPP23_COMPATIBILITY_TEST.md  PHASE2_GUIDE.md  README.md  module_example.cppm  modules.md  test_module.cppm  test_module_main.cpp  test_program
epix_engine/: CMakeLists.txt  README_MODULES.md  xmake.lua
epix_engine/app/: CMakeLists.txt  xmake.lua
epix_engine/app/src/: app.cpp  command.cpp  label.cpp  loop.cpp  profiler.cpp  runner.cpp  runner_tools.cpp  schedule.cpp  schedule_system.cpp  schedules.cpp  stage_runner.cpp  subapp.cpp  substage_runner.cpp  system.cpp  systemset.cpp  tools.cpp  world.cpp
epix_engine/app/tests/: CMakeLists.txt  xmake.lua
epix_engine/archived_headers/core/: core.hpp.20251216-022250
epix_engine/assets/: CMakeLists.txt  xmake.lua
epix_engine/assets/module/: epix.assets.cppm
epix_engine/assets/modules/: asset_id.cppm  assets.cppm  async_broadcast.cppm  async_channel.cppm  concept.cppm  epix.assets.cppm  handle.cppm  index.cppm  meta.cppm  path.cppm  processor.cppm  saver.cppm  server.cppm  store.cppm  transformer.cppm
epix_engine/assets/src/: assets.cpp  directory.cpp  embedded.cpp  epix_assets.cppm  file_asset.cpp  file_watcher.cpp  handle.cpp  id.cpp  index.cpp  info.cpp  loader.cpp  loaders.cpp  log.cpp  memory_asset.cpp  meta.cpp  path.cpp  plugin.cpp  processor.cpp  processor_gated.cpp  processor_mod.cpp  reader.cpp  server.cpp  server_mod.cpp  source.cpp
epix_engine/assets/tests/: CMakeLists.txt  asset_event_tests.cpp  asset_id_tests.cpp  asset_path_tests.cpp  asset_server_plugin_tests.cpp  assets.cpp  assets_store_tests.cpp  file_io_tests.cpp  file_watcher_tests.cpp  handle_tests.cpp  loader_types_tests.cpp  loading.cpp  memory_vfs_tests.cpp  memory_vfs_thread_watcher_tests.cpp  meta_tests.cpp  modernized_api_tests.cpp  module_tests.cpp  processor_embedded_tests.cpp  xmake.lua
epix_engine/common/: CMakeLists.txt  xmake.lua
epix_engine/core/: CMakeLists.txt  CMakeLists_modules.txt
epix_engine/core/module/: epix.core.api.cppm  epix.core.cppm  epix.core.entities.cppm  epix.core.entities.impl.cpp  epix.core.meta.cppm  epix.core.tick.cppm  epix.core.type_system.cppm
epix_engine/core/modules/: epix.core-api.cppm  epix.core-app.cppm  epix.core-archetype.cppm  epix.core-bundle.cppm  epix.core-change_detection.cppm  epix.core-component.cppm  epix.core-entities.cppm  epix.core-event.cppm  epix.core-fwd.cppm  epix.core-hierarchy.cppm  epix.core-label.cppm  epix.core-meta.cppm  epix.core-query.cppm  epix.core-schedule.cppm  epix.core-storage.cppm  epix.core-system.cppm  epix.core-tick.cppm  epix.core-type_system.cppm  epix.core-world.cppm  epix.core.cppm  meta.cppm  utils.cppm
epix_engine/core/src/: app.cpp  archetype.cpp  bundle.cpp  core.cppm  entities.cpp  epix_core.cppm  hierarchy.cpp  tests.cpp
epix_engine/core/tests/: access-test.cpp  access.cpp  app_main.cpp  archetype.cpp  bitvector.cpp  bundle.cpp  bundle_info.cpp  bundle_inserter.cpp  component_hooks.cpp  dense.cpp  entity_ref.cpp  hierarchy.cpp  input_iterable.cpp  module_test.cpp  query_iter.cpp  query_state.cpp  random_spawn.cpp  randomized_spawn.cpp  required_components.cpp  schedule.cpp  schedule_bevy_like.cpp  sparse_array.cpp  sparse_set.cpp  system.cpp  table.cpp  test_app_main.cpp  test_archetype.cpp  test_bitvector.cpp  test_bundle.cpp  test_bundle_info.cpp  test_bundle_inserter.cpp  test_component_hooks.cpp  test_entity_ref.cpp  test_query_iter.cpp  test_query_state.cpp  test_randomized_spawn.cpp  test_schedule.cpp  test_sparse_array.cpp  test_system.cpp  test_table.cpp  (+8 more)
epix_engine/debug_draw/: CMakeLists.txt
epix_engine/debug_draw/src/: base_context.cpp  base_mesh.cpp  base_pipeline.cpp  debug_draw.cpp  pipelines.cpp  systems.cpp
epix_engine/debug_draw/tests/: CMakeLists.txt
epix_engine/experimental/: CMakeLists.txt
epix_engine/experimental/examples/: brickmap_path_tracer.cpp  brickmap_path_tracer_4d.cpp  falling_sand.cpp  liquid_eulerian.cpp  voxel_path_tracer.cpp  voxel_path_tracer_4d.cpp
epix_engine/experimental/pixelbody/: CMakeLists.txt
epix_engine/extension/: CMakeLists.txt
epix_engine/font/: CMakeLists.txt
epix_engine/font/src/: font.cpp  (+6 more)
epix_engine/image/: CMakeLists.txt  CMakeLists_modules.txt
epix_engine/imgui/: CMakeLists.txt
epix_engine/input/: CMakeLists.txt  xmake.lua
epix_engine/mesh/: CMakeLists.txt
epix_engine/pixel_render/: CMakeLists.txt
epix_engine/render/: CMakeLists.txt
epix_engine/render_ogl/: CMakeLists.txt
epix_engine/render_vk/: CMakeLists.txt
epix_engine/render_vk2/: CMakeLists.txt
epix_engine/sand/: CMakeLists.txt
epix_engine/sand_physics/: CMakeLists.txt
epix_engine/shader/: CMakeLists.txt
epix_engine/sprite/: CMakeLists.txt
epix_engine/src/: epix.cppm  image.cpp
epix_engine/tasks/: CMakeLists.txt
epix_engine/text/: CMakeLists.txt
epix_engine/time/: CMakeLists.txt
epix_engine/transform/: CMakeLists.txt
epix_engine/vulkan/: CMakeLists.txt
epix_engine/vulkan_graph/: CMakeLists.txt
epix_engine/window/: CMakeLists.txt  xmake.lua
examples/: CMakeLists.txt  module_test.cpp  module_usage_example.cpp  unified_module_demo.cpp  xmake.lua
examples/app/: CMakeLists.txt  custom_system_param.cpp  query.cpp  resource.cpp  schedule.cpp  xmake.lua
examples/assets/: CMakeLists.txt  assets.cpp  loading.cpp
examples/dag/: task_graph.cpp
examples/render/: CMakeLists.txt  graph.cpp  nvrhitest.cpp
examples/vk-integration-trial/: CMakeLists.txt
examples/webgpu_simple/: CMakeLists.txt  main.cpp
examples/window/: CMakeLists.txt  test.cpp  xmake.lua
libs/imgui/: CMakeLists.txt  xmake.lua
libs/wgpu-dawn/: CMakeLists.txt
tests/webgpu/: CMakeLists.txt  test_header_compile.cpp
(+1456 files in other folders)
