cmake_minimum_required(VERSION 3.21)

function(epix_parse_options)
  if(EPIX_ENABLE_TRACY)
    target_compile_definitions(${ARGN} PRIVATE EPIX_ENABLE_TRACY)
  endif()
  if(EPIX_USE_VOLK)
    target_compile_definitions(${ARGN} PUBLIC EPIX_USE_VOLK)
  endif()
  if (EPIX_IMPORT_STD AND EPIX_CXX_MODULE)
    target_compile_definitions(${ARGN} PUBLIC EPIX_IMPORT_STD)
  endif()
  if(EPIX_ENABLE_TEST)
    target_compile_definitions(${ARGN} PRIVATE EPIX_ENABLE_TEST)
    target_link_libraries(${ARGN} PRIVATE GTest::gtest_main)
  endif()
endfunction()

function(epix_add_tests GROUP_NAME)
  if(NOT EPIX_ENABLE_TEST)
    return()
  endif()
  # Usage: epix_add_tests(<group> [TESTS_DIR <rel-dir>] LINK_LIBS <lib> ...)
  # TESTS_DIR defaults to "tests". All tests run with WORKING_DIRECTORY =
  # EPIX_ENGINE_SOURCE_DIR (engine root) so "assets/..." paths resolve correctly.
  cmake_parse_arguments(PARSE_ARGV 1 _T "" "TESTS_DIR" "LINK_LIBS")
  if(NOT _T_TESTS_DIR)
    set(_T_TESTS_DIR "tests")
  endif()
  set(_dir "${CMAKE_CURRENT_SOURCE_DIR}/${_T_TESTS_DIR}")
  file(GLOB_RECURSE _SRCS CONFIGURE_DEPENDS "${_dir}/*.cpp")
  foreach(_SRC IN LISTS _SRCS)
    file(RELATIVE_PATH _REL "${_dir}" "${_SRC}")
    set(_NAME "test_${GROUP_NAME}_${_REL}")
    string(REPLACE "/" "_" _NAME "${_NAME}")
    string(REPLACE "\\" "_" _NAME "${_NAME}")
    string(REPLACE ".cpp" "" _NAME "${_NAME}")
    add_executable(${_NAME} "${_SRC}")
    target_link_libraries(${_NAME} PRIVATE GTest::gtest_main ${_T_LINK_LIBS})
    add_test(NAME ${_NAME} COMMAND ${_NAME}
      WORKING_DIRECTORY "${EPIX_ENGINE_SOURCE_DIR}")
  endforeach()
endfunction()

function(epix_add_examples GROUP_NAME)
  if(NOT EPIX_ENABLE_EXAMPLE)
    return()
  endif()
  # Usage: epix_add_examples(<group> [EXAMPLES_DIR <rel-dir>] [GLOB_TYPE GLOB|GLOB_RECURSE]
  #                          [EXCLUDE_REGEX <regex>] LINK_LIBS <lib> ...)
  # EXAMPLES_DIR defaults to "examples". GLOB_TYPE defaults to GLOB_RECURSE.
  cmake_parse_arguments(PARSE_ARGV 1 _E "" "EXAMPLES_DIR;GLOB_TYPE;EXCLUDE_REGEX" "LINK_LIBS")
  if(NOT _E_EXAMPLES_DIR)
    set(_E_EXAMPLES_DIR "examples")
  endif()
  if(NOT _E_GLOB_TYPE)
    set(_E_GLOB_TYPE "GLOB_RECURSE")
  endif()
  set(_dir "${CMAKE_CURRENT_SOURCE_DIR}/${_E_EXAMPLES_DIR}")
  file(${_E_GLOB_TYPE} _SRCS CONFIGURE_DEPENDS "${_dir}/*.cpp")
  if(_E_EXCLUDE_REGEX)
    list(FILTER _SRCS EXCLUDE REGEX "${_E_EXCLUDE_REGEX}")
  endif()
  foreach(_SRC IN LISTS _SRCS)
    file(RELATIVE_PATH _REL "${_dir}" "${_SRC}")
    set(_NAME "example_${GROUP_NAME}_${_REL}")
    string(REPLACE "/" "_" _NAME "${_NAME}")
    string(REPLACE "\\" "_" _NAME "${_NAME}")
    string(REPLACE ".cpp" "" _NAME "${_NAME}")
    add_executable(${_NAME} "${_SRC}")
    target_link_libraries(${_NAME} PRIVATE ${_E_LINK_LIBS})
  endforeach()
endfunction()

function(epix_add_module MODULE_NAME)
  add_library(${MODULE_NAME} STATIC)
  epix_parse_options(${MODULE_NAME})
  file(GLOB_RECURSE MODULES CONFIGURE_DEPENDS "modules/*.ixx" "modules/*.cppm")
  file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.c" "src/*.cpp")
  target_include_directories(${MODULE_NAME} PUBLIC "include")
  if (EPIX_CXX_MODULE)
    target_sources(${MODULE_NAME} 
      PUBLIC FILE_SET cxx_modules TYPE CXX_MODULES FILES ${MODULES}
      PRIVATE ${SOURCES}
    )
  endif()
endfunction()

function(epix_add_module_subdir MODULE_NAME SUBDIR)
  add_library(${MODULE_NAME} STATIC)
  epix_parse_options(${MODULE_NAME})
  file(GLOB_RECURSE MODULES CONFIGURE_DEPENDS "${SUBDIR}/modules/*.ixx" "${SUBDIR}/modules/*.cppm")
  file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "${SUBDIR}/src/*.c" "${SUBDIR}/src/*.cpp")
  target_include_directories(${MODULE_NAME} PUBLIC "include")
  if (EPIX_CXX_MODULE)
    target_sources(${MODULE_NAME} 
      PUBLIC FILE_SET cxx_modules TYPE CXX_MODULES FILES ${MODULES}
      PRIVATE ${SOURCES}
    )
  endif()
endfunction()

add_subdirectory(tasks)
add_subdirectory(core)
add_subdirectory(time)
add_subdirectory(input)
add_subdirectory(assets)
add_subdirectory(image)
add_subdirectory(window)
add_subdirectory(transform)
add_subdirectory(shader)
add_subdirectory(render)
add_subdirectory(mesh)
add_subdirectory(sprite)
add_subdirectory(text)

add_subdirectory(extension)
add_subdirectory(experimental)