# Output directory defaults — only set if not already configured by a parent project.
# Set here (not in root) to avoid affecting third-party FetchContent builds.
if (NOT DEFINED CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
endif()
if (NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
endif()
if (NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
endif()

add_subdirectory(tasks)
add_subdirectory(core)
add_subdirectory(time)
add_subdirectory(input)
add_subdirectory(assets)
add_subdirectory(image)
add_subdirectory(window)
add_subdirectory(transform)
add_subdirectory(shader)
add_subdirectory(render)
add_subdirectory(mesh)
add_subdirectory(sprite)
add_subdirectory(text)

add_subdirectory(extension)
add_subdirectory(experimental)
