epix_add_module(epix_core)
target_link_libraries(epix_core PUBLIC BSThreadPool)
target_link_libraries(epix_core PUBLIC spdlog::spdlog)
target_link_libraries(epix_core PUBLIC epix_tasks)
target_link_libraries(epix_core PRIVATE Taskflow)
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang" AND NOT WIN32)
  target_link_libraries(epix_core PUBLIC stdc++exp)
endif()
if (EPIX_ENABLE_TRACY)
  target_compile_definitions(epix_core PRIVATE EPIX_ENABLE_TRACY)
  target_link_libraries(epix_core PRIVATE TracyClient)
endif()

epix_add_tests(core LINK_LIBS epix_core)