epix_add_module_subdir(epix_ext_fallingsand fallingsand)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_core)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_mesh)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_transform)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_core_graph)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_ext_grid)

file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
foreach(TEST_SRC IN LISTS TEST_SOURCES)
	# create a unique target name based on relative path: replace separators and strip extension
	file(RELATIVE_PATH TEST_REL "${CMAKE_CURRENT_SOURCE_DIR}/tests" "${TEST_SRC}")
	string(CONCAT TEST_NAME "test_ext_" "${TEST_REL}")
	string(REPLACE "/" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE "\\" "_" TEST_NAME "${TEST_NAME}")
	string(REPLACE ".cpp" "" TEST_NAME "${TEST_NAME}")

	add_executable(${TEST_NAME} "${TEST_SRC}")
	target_link_libraries(${TEST_NAME} PRIVATE epix_ext_fallingsand)
	if (TEST_REL MATCHES "^visual/")
		target_link_libraries(${TEST_NAME} PRIVATE epix_glfw)
		target_link_libraries(${TEST_NAME} PRIVATE epix_glfw_render)
		target_link_libraries(${TEST_NAME} PRIVATE epix_input)
		target_link_libraries(${TEST_NAME} PRIVATE epix_render)
		target_link_libraries(${TEST_NAME} PRIVATE epix_window)
	else()
		target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest_main)
		add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
	endif()
endforeach()