# --- examples: auto-discover ---
file(GLOB_RECURSE EXAMPLE_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
foreach(EXAMPLE_SRC IN LISTS EXAMPLE_SOURCES)
	file(RELATIVE_PATH EXAMPLE_REL "${CMAKE_CURRENT_SOURCE_DIR}/examples" "${EXAMPLE_SRC}")
	string(CONCAT EXAMPLE_NAME "example_ext_" "${EXAMPLE_REL}")
	string(REPLACE "/" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE "\\" "_" EXAMPLE_NAME "${EXAMPLE_NAME}")
	string(REPLACE ".cpp" "" EXAMPLE_NAME "${EXAMPLE_NAME}")

	add_executable(${EXAMPLE_NAME} "${EXAMPLE_SRC}")
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_glfw)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_glfw_render)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_input)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_render)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_window)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_imgui)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_core_graph)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_core)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_transform)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_time)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_mesh)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_ext_grid_gpu)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_sprite)
	target_link_libraries(${EXAMPLE_NAME} PRIVATE epix_text)
endforeach()