file(GLOB_RECURSE MODULE_SOURCES CONFIGURE_DEPENDS "src/*.c" "src/*.cpp")
list(APPEND MODULE_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library(epix_image STATIC ${MODULE_SOURCES})
epix_parse_options(epix_image)
target_include_directories(epix_image PUBLIC ${MODULE_INCLUDES})
target_link_libraries(epix_image PUBLIC epix_core)
target_link_libraries(epix_image PUBLIC epix_assets)
target_link_libraries(epix_image PUBLIC nvrhi)
target_link_libraries(epix_image PRIVATE stbimage)
